Bug 359568 - "Radius of border corner does not cut off contents of box" (Undo the hack to fallback to non-rounded fill when mBorder.colors is set) [p=alfredkayser@gmail.com (Alfred Kayser) r=vlad sr=roc a1.9=schrep]